# system_proxy.rs

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: reqwest.rs  reqwest_async_portal.rs  reqwest_blocking_env.rs
scripts/: check
src/: env.rs  lib.rs  noproxy.rs  types.rs  unix.rs  windows.rs
src/unix/: gio.rs  portal.rs
