[package]
name = "system_proxy"
version = "0.1.3"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.59"
description = "Get the system-wide HTTP proxy"
documentation = "https://docs.rs/system_proxy"
readme = "README.md"
homepage = "https://github.com/swsnr/system_proxy.rs"
repository = "https://github.com/swsnr/system_proxy.rs.git"
license = "MPL-2.0"
keywords = ["HTTP", "proxy", "sytem-wide"]
categories = [
    "api-bindings",
    "os",
    "network-programming",
    "web-programming::http-client",
]

[features]
default = ["gnome"]
# Enable system proxy information in Gnome.  This does not depend on any actual
# Gnome libraries, but only on Glib, but it needs a name different than those of
# the underlying gio and glib dependencies due to limitations in naming cargo
# features.
gnome = ["gio", "glib"]

[dependencies]
log = "0.4.17"
url = "2.3.1"
static_assertions = "1.1.0"

[dev-dependencies]
temp-env = "0.3.1"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.13", features = ["blocking"] }

[target.'cfg(all(unix, not(target_os="mac_os")))'.dependencies]
gio = { version = "0.16.7", optional = true }
# We require 2.66 for glib::UriError.
glib = { version = "0.16.7", optional = true, features = ["v2_66"] }

[package.metadata.docs.rs]
# On docs.rs build glib and gio with the dox feature to disable lookup of system
# dependencies which are not available on docs.rs
features = ["glib/dox", "gio/dox"]
