[package]
name = "system_proxy"
version = "0.2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.66"
description = "Get the system-wide HTTP proxy"
documentation = "https://docs.rs/system_proxy"
readme = "README.md"
homepage = "https://github.com/swsnr/system_proxy.rs"
repository = "https://github.com/swsnr/system_proxy.rs.git"
license = "MPL-2.0"
keywords = ["HTTP", "proxy", "sytem-wide"]
categories = [
    "api-bindings",
    "os",
    "network-programming",
    "web-programming::http-client",
]

[features]
default = []
# Enable the Gio proxy resolver.  This builds and links against Glib.
gio = ["dep:glib", "dep:gio"]
# Enable system proxy information from the freekdesktop portal API.  This adds a
# dependency on zbus and requires a corresponding portal implementation at
# runtime.  However, all major desktop environments on Linux provide this
# implementation, so it's generally recommended to use this API on Linux.
portal = ["zbus"]

[dependencies]
log = "0.4.17"
url = "2.3.1"
static_assertions = "1.1.0"

[dev-dependencies]
temp-env = "0.3.2"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
tokio = { version = "1.26.0", features = ["rt", "sync"] }
zbus = { version = "3.10.0", default-features = false, features = ["tokio"] }

[target.'cfg(all(unix, not(target_os="mac_os")))'.dependencies]
gio = { version = "0.17.2", optional = true }
# We require 2.66 for glib::UriError.
glib = { version = "0.17.2", optional = true, features = ["v2_66"] }
zbus = { version = "3.10.0", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
# On docs.rs build glib and gio with the dox feature to disable lookup of system
# dependencies which are not available on docs.rs.  We also need to pick an
# async backend for zbus.
features = ["glib/dox", "gio/dox", "zbus/async-io"]
